[package]
name = "modm"
description = "A git like cli tool for managing your ML models"
repository = "https://github.com/maksymalist/modm"
keywords = ["cli", "machine learning", "model"]
license = "MIT"
version = "0.1.0"
edition = "2021"
authors = ["maksymalist"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.2.2"
tokio = "1.27.0"

[profile.dev]
opt-level = 1


[profile.release]
opt-level = 3
