[package]
name = "modm"
description = "A git like cli tool for machine learning version control"
repository = "https://github.com/maksymalist/modm"
keywords = ["cli", "ML", "model"]
license = "MIT"
version = "0.1.0"
edition = "2021"
authors = ["maksymalist"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.2", features = ["derive"] }
tokio = { version = "1.27.0", features = ["full"] }
tokio-util = "0.7.7"
reqwest = { version = "0.11.16", features = ["blocking", "json"] }
oauth2 = "4.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21.0"
serde_urlencoded = "0.7.1"
dialoguer = "0.10.4"
toml = "0.7.3"

[profile.dev]
opt-level = 1


[profile.release]
opt-level = 3
